--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:16
+    image: postgres:15
     container_name: huntarr-postgres
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-huntarr}
@@ -9,7 +9,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_v2:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-huntarr}"]
       interval: 10s
@@ -104,7 +104,7 @@ services:
       - postgres
 
 volumes:
-  postgres_data:
+  postgres_data_v2:
   artifacts_data:
   browser_session_data:
   uploads_data:
