--- a/packages/core/pyproject.toml
+++ b/packages/core/pyproject.toml
@@ -6,11 +6,11 @@ build-backend = "setuptools.build_meta"
 name = "huntarr-core"
 version = "0.1.0"
 description = "Shared core types and workflows for Huntarr"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 dependencies = [
   "pydantic>=2.7.0",
   "httpx>=0.27.0",
-  "playwright>=1.51.0",
+  "playwright==1.51.0",
   "langgraph>=0.3.0",
   "langchain-core>=0.3.0",
   "asyncpg>=0.30.0",
