--- a/apps/worker/Dockerfile
+++ b/apps/worker/Dockerfile
@@ -6,9 +6,11 @@ ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app/apps/worker/src:/app/packages/core/src
 
-COPY packages/core /app/packages/core
 COPY apps/worker/requirements.txt /app/apps/worker/requirements.txt
-RUN pip install --no-cache-dir -e /app/packages/core && pip install --no-cache-dir -r /app/apps/worker/requirements.txt
+RUN pip install --no-cache-dir -r /app/apps/worker/requirements.txt
+
+COPY packages/core /app/packages/core
+RUN pip install --no-cache-dir -e /app/packages/core
 
 COPY apps/worker/src /app/apps/worker/src
 
